--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+<head><link rel="shortcut icon" href="image/logo.ico" />
 <html>
-<head><link rel="shortcut icon" href="image/logo.ico"/>
+<head>
   <meta charset="UTF-8">
   <meta name="description" content="Cake & Pastry">
   <meta name="keywords" content="Bakery">
