--- a/thankyou.html
+++ b/thankyou.html
@@ -24,6 +24,6 @@ body {
                                               Please wait for our notifications </pre></h2>
 <center> <a href="https://www.glitter-graphics.com"><img src="http://dl2.glitter-graphics.net/pub/549/549062c91it46lgr.gif" width=115 height=115 border=0></a></center>
 <br>
-<center><a href="index.html"><img src="Image/button2.png"></a></center>
+<center><a href="index.html"><img src="image/button2.png"></a></center>
 </body>
 </html>
